subiendo los cambios de prueba

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
                 d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h6a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
                 clip-rule="evenodd"></path>
             </svg>
-            <a class="cursor-pointer text-xl font-semibold dark:text-white" routerLink="">Alonso Nava</a>
+            <a class="cursor-pointer text-xl font-semibold dark:text-white" routerLink="">Libio Armando</a>
           </div>
 
         </flowbite-navbar>
@@ -31,7 +31,7 @@
           <!-- Apps -->
           <button type="button" data-dropdown-toggle="apps-dropdown"
             class="p-2 text-gray-500 rounded-lg hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600">
-            <span class="sr-only">View notifications</span>
+            <span class="sr-only">Ver Notificaciones</span>
             <!-- Icon -->
             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
               viewBox="0 0 18 18">
@@ -150,8 +150,8 @@
             class="hidden z-50 my-4 w-56 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600"
             id="dropdown">
             <div class="py-3 px-4">
-              <span class="block text-sm font-semibold text-gray-900 dark:text-white">Alonso Nava</span>
-              <span class="block text-sm text-gray-500 truncate dark:text-gray-400">{{"alonso@gmail.com"}}</span>
+              <span class="block text-sm font-semibold text-gray-900 dark:text-white">Libio Armando</span>
+              <span class="block text-sm text-gray-500 truncate dark:text-gray-400">{{"libio@gmail.com"}}</span>
             </div>
             <ul class="py-1 text-gray-500 dark:text-gray-400" aria-labelledby="dropdown">
               <li>
