--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-
-<app-login></app-login>
-
 <header class="antialiased">
   <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
     <div class="flex flex-wrap justify-between items-center">
@@ -16,7 +13,7 @@
             </svg>
             <a class="cursor-pointer text-xl font-semibold dark:text-white" routerLink="">Libio Armando</a>
           </div>
-
+          <label><strong></strong></label>
         </flowbite-navbar>
       </div>
       <div class="flex items-center lg:order-2">        
