--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
         <div class="lg:flex w-1/2 hidden bg-gray-500 bg-no-repeat bg-cover relative items-center" style="background-image: url(https://images.unsplash.com/photo-1577495508048-b635879837f1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=675&q=80);">
             <div class="absolute bg-black opacity-60 inset-0 z-0"></div>
             <div class="w-full px-24 z-10">
-                <h1 class="text-5xl font-bold text-left tracking-wide">Keep it special</h1>
+                <h1 class="text-5xl font-bold text-left tracking-wide">IESP Antonio Lorena</h1>
                 <p class="text-3xl my-4">Capture your personal memory in unique way, anywhere.</p>
             </div>
             <div class="bottom-0 absolute p-4 text-center right-0 left-0 flex justify-center space-x-4">
